objects/ssot__ClaimParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimParticipantRoleId__c</fullName>
        <label>Claim Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyParticipantId__c</fullName>
        <label>Insurance Policy Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInjured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Injured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantQualificationCodeId__c</fullName>
        <label>Participant Qualificiation Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128211455_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimParticipant_ParticipantId_map_A_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>ClaimParticipant_ParticipantId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1723128211455_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128215545_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimParticipant_ParticipantId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ClaimParticipant_ParticipantId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1723128215545_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128265628_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimParticipant_ClaimId_map_Claim_I_rel</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimParticipant_ClaimId_map_Claim_I_rel</relationshipLabel>
        <relationshipName>rel_1723128265628_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>